--- a/css/style.sass
+++ b/css/style.sass
@@ -1,8 +1,8 @@
-/* Define colors */
+/* First define colors & change the html elements */
+/* Then change styling for classes, ids & more */
 $red: #fa7970
 $black: #161b22
 
-/* Change html elements */
 html
     color: $red
     background-color: $black
@@ -11,7 +11,6 @@ html
 main
     font-size: 1rem
 
-/* Change classes & ids */
 #current-time
     position: absolute
     top: 25px
